[package]
name = "tiny-url-front"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# webassembly 框架
yew = "0.19"

# 路由
yew-router = "0.16"

# 轻量级日志库
log = "0.4.17"

# 打印原代码行数、文件名和消息
wasm-logger = "0.2"

# 出现 error 时的钩子组件
console_error_panic_hook = "0.1.7"

serde = {version = "1", features = ["derive"]}
wasm-bindgen-futures = "0.4.30"
gloo-net = "0.2.4"
wasm-bindgen = "0.2.67"
gloo = "0.8"
gloo-utils = "0.1.5"
web-sys = "0.3.60"
